syntax = "proto3";

import "onboardings/domain/values/v1/message.proto";
package onboardings.domain.commands.v2;


message RegisterCrmEntityRequest {
  string id = 1;
  string value = 2;
}
message RequestDeputyOwnerRequest {
  string id = 1;
  string deputy_owner_email = 2;
}
message ApproveEntityRequest {
  string comment = 1;
}
message RejectEntityRequest {
  string comment = 1;
}
message NotifyOnboardEntityCompletedRequest {
  string id = 1;
  string email = 2;
  string value = 3;
  onboardings.domain.values.v1.Approval approval = 4;
}